# Gemini-File-Search

./: .astgreprc.yml  .claude.md  .gitignore  DEVELOPER_GUIDE.md  README.md  main.py  pyproject.toml
api/: __init__.py  client.py  documents.py  query.py  stores.py
docs-guide/: README.md  package-lock.json  package.json
docs-guide/.vitepress/: config.ts
docs-guide/.vitepress/theme/: index.ts
docs-guide/.vitepress/theme/components/: CodePlayground.vue  TutorialWizard.vue
docs-guide/.vitepress/theme/styles/: index.css  rtl.css
docs-guide/docs/.vitepress/: config.ts
docs-guide/docs/.vitepress/theme/: index.ts
docs-guide/docs/.vitepress/theme/components/: InteractiveDiagram.vue  VideoPlayer.vue
docs-guide/docs/en/: index.md  troubleshooting.md
docs-guide/docs/en/api/: documents.md  query.md  stores.md
docs-guide/docs/en/concepts/: architecture.md  citations.md  documents.md  semantic-search.md  stores.md
docs-guide/docs/en/getting-started/: first-query.md  first-store.md  setup.md
docs-guide/docs/en/guides/: fastapi-integration.md  metadata-filtering.md  production-deployment.md  query.md  upload-documents.md
docs-guide/docs/he/: index.md
static/: app.js
templates/: base.html  dashboard.html  store_detail.html
tests/: __init__.py  test_api.py
